theme: use less grey in dark mode and reduce overall color pallete
Also:

* Treat HR elements as pull out elements, similar to figures
  (occupying full width, incl negative margins).

* Improve the way pre.highlight is pulled out. The negative margin
  was already in place and there was some re-padding as well,
  but the amounts were different so it did not align perfectly.

* Clean up date_format overriddes (no-op).

--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,7 @@ plainwhite:
   name: Timo Tijhof
   # Caption in sidebar
   tagline: Principal Engineer, Wikimedia Foundation.
+  # Date format in by lines
   date_format: "%-e %b %Y"
   # Excerpts on Home and Tag pages
   show_excerpts: true
